--- a/src/main/resources/templates/front/comments.html
+++ b/src/main/resources/templates/front/comments.html
@@ -3,7 +3,7 @@
 <head th:include="include :: head('做题吧 - 留言')"></head>
 <body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
-<div class="layui-container">
+<div id="LAY_MAIN" class="layui-container">
     <div class="search-section">
         <form lay-filter="searchForm" class="layui-card layui-form">
             <div class="layui-card-body">
