--- a/src/main/resources/templates/front/rooms.html
+++ b/src/main/resources/templates/front/rooms.html
@@ -3,8 +3,8 @@
 <head th:include="include :: head('做题吧 - 答题室')"></head>
 <body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
-<div class="layui-container">
-    <div class="layui-row search-section">
+<div id="LAY_MAIN" class="layui-container">
+    <div class="search-section">
         <form lay-filter="searchForm" class="layui-card layui-form">
             <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
             <div class="layui-card-body">
@@ -88,11 +88,12 @@
             </div>
         </div>
     </div>
-    <div class="layui-row layui-card">
+    <div class="layui-row">
         <div id="pagination" class="laytable-cell-space layui-fluid"></div>
     </div>
 </div>
 <th:block th:include="include :: main_foot"></th:block>
+</body>
 <script>
     layui.use(['jquery', 'element', 'form'], function ($, element, form) {
         $(function () {
@@ -114,5 +115,4 @@
         });
     });
 </script>
-</body>
 </html>
