--- a/src/main/resources/templates/front/tools.html
+++ b/src/main/resources/templates/front/tools.html
@@ -3,7 +3,7 @@
 <head th:include="include :: head('做题吧 - 小工具')"></head>
 <body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
-<div class="layui-container">
+<div id="LAY_MAIN" class="layui-container">
     <div class="layui-row search-section">
         <div class="layui-card">
             <div class="layui-card-header" style="background-color: #E2E2E2">常用工具</div>
