--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -171,7 +171,7 @@
 
 <div th:fragment="main_head">
     <div id="mainNav" class="layui-header">
-        <div class="layui-container layui-row">
+        <div class="layui-container">
             <div class="mobile-logo"><img th:src="@{/images/logo.png}" alt="logo"/> 做题吧</div>
             <div class="mobile-header-more">
                 <i id="mobile-menu" class="layui-icon layui-icon-spread-left"></i>
