--- a/src/main/resources/templates/front/comment.html
+++ b/src/main/resources/templates/front/comment.html
@@ -3,7 +3,7 @@
 <head th:include="include :: head('做题吧 - 首页')"></head>
 <body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
-<div class="layui-container">
+<div id="LAY_MAIN" class="layui-container">
     <div class="layui-card">
         <div class="layui-card-header">
             <h1 style="text-align: center;font-size: 28px;color: #333;margin: 20px 0;">探索知识，收听意见</h1>
