--- a/src/main/resources/templates/front/learns.html
+++ b/src/main/resources/templates/front/learns.html
@@ -3,7 +3,7 @@
 <head th:include="include :: head('做题吧 - 学库')"></head>
 <body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
-<div class="layui-container">
+<div id="LAY_MAIN" class="layui-container">
     <div class="search-section">
         <form lay-filter="searchForm" class="layui-card layui-form">
             <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
@@ -47,7 +47,6 @@
         </div>
     </div>
     <div class="layui-row">
-        <!-- 分页 -->
         <div id="pagination" class="laytable-cell-space layui-fluid"></div>
     </div>
 </div>
