--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -21,12 +21,11 @@
     <script type="text/javascript" th:src="@{/js/lay-config.js}" th:if="${#request.servletPath.startsWith('/admin')}"></script>
     <script type="text/javascript" th:unless="${#request.servletPath.startsWith('/admin')}">
         function layPage(id, count, curr, limit) {
-            layui.laypage.render({
-                elem: id, count: count, curr: curr || 1, limit: limit || 12, theme: '#B55AD0',
+            return layui.laypage.render({
+                elem: id, count: count, curr: curr || 1, limit: limit || 8, theme: '#B55AD0',
                 first: '首页', last: '尾页', prev: '<em>←</em>', next: '<em>→</em>', jump: function (obj, first) {
                     if (!first) {
-                        console.log(window.location.pathname)
-                        // window.location.href = window.location.pathname
+                        window.location.href = window.location.pathname + "?page=" + obj.curr
                     }
                 }
             });
