--- a/src/main/resources/templates/front/comments.html
+++ b/src/main/resources/templates/front/comments.html
@@ -23,18 +23,21 @@
         </form>
     </div>
     <div class="layui-row">
-        <div class="layui-col-xs12" style="padding: 15px 0; border-bottom: 1px solid #eee;" th:each="comment : ${comments}">
+        <div class="layui-col-xs12 comments-info" th:each="comment : ${comments}">
             <div class="layui-col-md1 layui-col-sm1 layui-col-xs2  laytable-cell-space">
                 <img src="/images/logo.png" alt="头像" style="width: 40px; height: 40px; border-radius: 50%;">
             </div>
-            <div class="layui-col-md10 layui-col-sm10 layui-col-xs6 ">
-                <div style="font-weight: bold;" th:text="${comment.username}">用户名</div>
-                <div style="color: #999; font-size: 12px;" th:text="${#dates.format(comment.ctime, 'yyyy-MM-dd HH:mm:ss')}">留言时间</div>
-                <div style="color: #666; font-size: 12px; margin-top: 5px;" th:text="${comment.content}">内容</div>
+            <div class="layui-col-md10 layui-col-sm10 layui-col-xs6">
+                <div class="layui-col-md2">
+                    <div style="font-weight: bold;" th:text="${comment.username}">用户名</div>
+                    <div style="color: #999; font-size: 12px;" th:text="${#dates.format(comment.ctime, 'yyyy-MM-dd HH:mm:ss')}">留言时间</div>
+                </div>
+                <div class="layui-col-md10" th:text="${comment.content}">内容</div>
             </div>
             <div class="layui-col-md1 layui-col-sm1 layui-col-xs4 layui-btn-container layui-table-pagebar">
-                <button class="layui-btn layui-btn-sm layui-btn-xs layui-btn-normal" th:data-id="${comment.id}">收藏</button>
-                <button class="layui-btn layui-btn-sm layui-btn-xs" th:data-id="${comment.id}">点赞</button>
+                <button class="layui-btn layui-btn-xs layui-btn-primary layui-border-green" th:data-id="${comment.id}"
+                        th:text="${likes == null ?'点赞': likes.get(comment.id)} ? '已点赞' : '点赞'">点赞
+                </button>
             </div>
         </div>
         <div id="pagination" class="laytable-cell-space layui-fluid"></div>
@@ -43,11 +46,10 @@
 <th:block th:include="include :: main_foot"></th:block>
 <script>
     layui.use(['jquery', 'form'], function ($, form) {
-        layPage('pagination', "[[${count}]]");
+        layPage('pagination', "[[${count}]]", "[[${page}]]");
 
         $('#resetBtn').on('click', function () {
             form.val('searchForm', {"content": ""});
-            console.log(1111)
             form.render();
         });
 
