--- a/src/main/resources/templates/front/room.html
+++ b/src/main/resources/templates/front/room.html
@@ -4,7 +4,7 @@
 <body class="layui-layout">
 <th:block th:include="include :: main_head"></th:block>
 <div id="LAY_MAIN" class="layui-container" th:with="util=${T(com.fit.util.DictRoomUtil)}">
-    <div class="search-section layui-row layui-col-space10">
+    <div class="search-section layui-row">
         <!-- 左侧：课程信息 -->
         <div class="layui-col-md8">
             <div class="layui-card">
