--- a/src/main/resources/templates/front/rooms.html
+++ b/src/main/resources/templates/front/rooms.html
@@ -54,7 +54,8 @@
             <div class="layui-card" style="border: 1px solid #EEEEEE">
                 <div class="layui-card-header" style="background: #E2E2E2; color: black;">
                     <i class="layui-icon layui-icon-component"></i>
-                    <span th:text="${room?.title}">答题室标题</span>
+                    <a th:href="@{/room(id=${room?.id})}" th:title="${room?.title}"
+                       th:text="${room.title.length() > 16 ? #strings.substring(room.title, 0, 13) + '...' : room.title}">答题室标题</a>
                     <span class="layui-badge" style="float: right;" th:text="${room?.timeMode==1?'限时答题':'永久有效'}">永久有效</span>
                 </div>
                 <div class="layui-card-body fixed-content-height" th:with="util=${T(com.fit.util.DictRoomUtil)}">
@@ -97,7 +98,7 @@
 <script>
     layui.use(['jquery', 'element', 'form'], function ($, element, form) {
         $(function () {
-            layPage('pagination', "[[${count}]]")
+            layPage('pagination', "[[${count}]]", "[[${page}]]", "[[${limit}]]");
             $('.filter-tag[data-pid]').removeClass('active').filter('[data-pid="[[${pid}]]"]').addClass('active');
             $('.filter-tag[data-eid]').removeClass('active').filter('[data-eid="[[${eid}]]"]').addClass('active');
             $('.filter-tag[data-mid]').removeClass('active').filter('[data-mid="[[${mid}]]"]').addClass('active');
