--- a/src/main/resources/templates/front/learns.html
+++ b/src/main/resources/templates/front/learns.html
@@ -6,14 +6,14 @@
 <div id="LAY_MAIN" class="layui-container">
     <div class="search-section">
         <form lay-filter="searchForm" class="layui-card layui-form">
+            <input type="hidden" id="sid" name="sid" th:value="${sid}"/>
             <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
             <div class="layui-card-body">
                 <div class="layui-form-item">
                     <label class="layui-form-label">科目分类：</label>
                     <div class="layui-input-block">
-                        <input type="hidden" name="pid" th:value="${pid}"/>
-                        <span class="filter-tag active" data-pid="">全部</span>
-                        <span class="filter-tag" th:each="screen : ${screens}" th:data-pid="${screen.id}" th:text="${screen.name}">分类名</span>
+                        <span class="filter-tag active" data-sid="">全部</span>
+                        <span class="filter-tag" th:each="screen : ${screens}" th:data-sid="${screen.id}" th:text="${screen.name}">分类名</span>
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -54,13 +54,13 @@
 <script>
     layui.use(['jquery', 'element', 'form', 'laypage'], function ($, element, form, laypage) {
         $(function () {
-            layPage('pagination', "[[${count}]]", "[[${page}]]", "[[${limit}]]");
-            $('.filter-tag[data-pid]').removeClass('active').filter('[data-pid="[[${pid}]]"]').addClass('active');
+            layPage('pagination', "[[${count}]]", "[[${page}]]", "[[${limit}]]", form.val('searchForm'));
+            $('.filter-tag[data-sid]').removeClass('active').filter('[data-sid="[[${sid}]]"]').addClass('active');
         });
         $('.filter-tag').on('click', function () {
             $(this).addClass('active').siblings('.filter-tag').removeClass('active');
-            let pid = $('.filter-tag[data-pid].active').data('pid');
-            window.location.href = `/learns?sid=${pid}`;
+            $('#sid').val($('.filter-tag[data-sid].active').data('sid'));
+            window.location.href = '/learns?' + new URLSearchParams(form.val('searchForm')).toString();
         });
 
         $('#resetBtn').on('click', function () {
@@ -69,7 +69,7 @@
         });
 
         form.on('submit(search)', function (obj) {
-            window.location.href = "/comments?" + $.param(obj.field);
+            window.location.href = "/learns?" + $.param(obj.field);
         });
     });
 </script>
