--- a/src/main/resources/templates/front/rooms.html
+++ b/src/main/resources/templates/front/rooms.html
@@ -6,13 +6,16 @@
 <div id="LAY_MAIN" class="layui-container">
     <div class="search-section">
         <form lay-filter="searchForm" class="layui-card layui-form">
+            <input type="hidden" id="eid" name="eid" th:value="${eid}"/>
+            <input type="hidden" id="mid" name="mid" th:value="${mid}"/>
+            <input type="hidden" id="sid" name="sid" th:value="${sid}"/>
             <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
             <div class="layui-card-body">
                 <div class="layui-form-item">
                     <label class="layui-form-label">科目分类：</label>
                     <div class="layui-input-block">
-                        <span class="filter-tag active" data-pid="">全部</span>
-                        <span class="filter-tag" th:each="screen : ${screens}" th:data-pid="${screen.id}" th:text="${screen.name}">分类名</span>
+                        <span class="filter-tag active" data-sid="">全部</span>
+                        <span class="filter-tag" th:each="screen : ${screens}" th:data-sid="${screen.id}" th:text="${screen.name}">分类名</span>
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -98,17 +101,17 @@
 <script>
     layui.use(['jquery', 'element', 'form'], function ($, element, form) {
         $(function () {
-            layPage('pagination', "[[${count}]]", "[[${page}]]", "[[${limit}]]");
-            $('.filter-tag[data-pid]').removeClass('active').filter('[data-pid="[[${pid}]]"]').addClass('active');
+            layPage('pagination', "[[${count}]]", "[[${page}]]", "[[${limit}]]", form.val('searchForm'));
             $('.filter-tag[data-eid]').removeClass('active').filter('[data-eid="[[${eid}]]"]').addClass('active');
             $('.filter-tag[data-mid]').removeClass('active').filter('[data-mid="[[${mid}]]"]').addClass('active');
+            $('.filter-tag[data-sid]').removeClass('active').filter('[data-sid="[[${sid}]]"]').addClass('active');
         });
         $('.filter-tag').on('click', function () {
             $(this).addClass('active').siblings('.filter-tag').removeClass('active');
-            let pid = $('.filter-tag[data-pid].active').data('pid');
-            let eid = $('.filter-tag[data-eid].active').data('eid');
-            let mid = $('.filter-tag[data-mid].active').data('mid');
-            window.location.href = `/rooms?sid=${pid}&eid=${eid}&mid=${mid}`;
+            $('#eid').val($('.filter-tag[data-eid].active').data('eid'));
+            $('#mid').val($('.filter-tag[data-mid].active').data('mid'));
+            $('#sid').val($('.filter-tag[data-sid].active').data('sid'));
+            window.location.href = '/rooms?' + new URLSearchParams(form.val('searchForm')).toString();
         });
         $('#resetBtn').on('click', function () {
             form.val('searchForm', {"title": ""});
